# mx-sc-on-behalf-interactor

./: .gitignore  Cargo.toml
common/common_errors/: Cargo.toml
common/common_structs/: Cargo.toml
dex/: Cargo.toml
dex/farm/: Cargo.toml
dex/farm-with-locked-rewards/: Cargo.toml
dex/fuzz/: Cargo.toml
dex/governance/: Cargo.toml
dex/pair/: Cargo.toml
dex/pair-mock/: Cargo.toml
dex/permissions-hub/: Cargo.toml
dex/price-discovery/: Cargo.toml
dex/proxy-deployer/: Cargo.toml
dex/router/: Cargo.toml
energy-integration/common-types/: Cargo.toml
energy-integration/energy-factory-mock/: Cargo.toml
energy-integration/energy-update/: Cargo.toml
energy-integration/farm-boosted-yields/: Cargo.toml
energy-integration/fees-collector/: Cargo.toml
energy-integration/governance-v2/: Cargo.toml
farm-staking/farm-staking-proxy/interactor/: Cargo.toml  set_state.json  state.toml
farm-staking/farm-staking-proxy/interactor/contract_codes/: multiversx-wegld-swap-sc.mxsc.json
farm-staking/farm-staking-proxy/interactor/proxies/: Cargo.toml
farm-staking/farm-staking-proxy/interactor/proxies/src/: energy_factory_mock_proxy.rs  energy_factory_proxy.rs  farm_staking_proxy.rs  farm_with_locked_rewards_proxy.rs  lib.rs  locked_asset_factory_proxy.rs  pair_proxy.rs  permission_hub_proxy.rs  router_proxy.rs
farm-staking/farm-staking-proxy/interactor/src/: interact.rs  interactor_main.rs  proxy.rs  state.rs
farm-staking/farm-staking-proxy/interactor/tests/: interact_cs_tests.rs  interact_tests.rs
locked-asset/: Cargo.toml
pause-all/: Cargo.toml
(+199 files in other folders)
